--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   location: ^4.2.0
+  google_maps_flutter: ^2.3.0
+
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.2
 dev_dependencies:
   flutter_test:
